<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_grey"
              android:orientation="vertical"
              tools:context=".ui.activity.me.SettingActivity">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/setting_remind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_show_mode"
            android:textColor="#333333"
            android:textSize="14sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/setting_switch_show"
            android:layout_width="46dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:theme="@style/Switch"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"/>

    <RelativeLayout
        android:id="@+id/setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_feedback"
            android:textColor="#333333"
            android:textSize="14sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"/>

    <RelativeLayout
        android:id="@+id/setting_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_about"
            android:textColor="#333333"
            android:textSize="14sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E4E4E4"/>

    <RelativeLayout
        android:id="@+id/setting_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="分享"
            android:textColor="#333333"
            android:textSize="14sp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/setting_exit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/bg_btn"
        android:text="@string/setting_exit"
        android:textColor="#FFFFFF"
        android:textSize="16sp"/>
</LinearLayout>